--- a/Sources/MagicCardTracker.Pwa/Components/LoadingIndicator.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/LoadingIndicator.razor
@@ -19,5 +19,5 @@
     public bool FadeOutBackground { get; set; }
 
     [Parameter]
-    public string Text { get; set; }
+    public string? Text { get; set; }
 }
