--- a/Sources/MagicCardTracker.Pwa/Components/Notifications.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/Notifications.razor
@@ -28,7 +28,7 @@
         _notificationService.NotificationReceived -= DisplayNotification;
     }
 
-    private void DisplayNotification(object sender, Notification notification)
+    private void DisplayNotification(object? sender, Notification notification)
     {
         _activeNotifications.Add(notification);
         StateHasChanged();
@@ -36,13 +36,22 @@
         // We fire and forget the dismiss activity as we do not want to block the notification chain. 
         // Nevertheless, we won't swallow any Exception
         DismissNotificationAfterTimeoutAsync(notification)
-            .ContinueWith(t => throw t.Exception, TaskContinuationOptions.OnlyOnFaulted);
+            .ContinueWith(
+                t => 
+                {
+                    if (t.Exception != null) 
+                    {
+                        throw t.Exception;
+                    }
+                },
+                TaskContinuationOptions.OnlyOnFaulted);
     }
 
     private async Task DismissNotificationAfterTimeoutAsync(Notification notification)
     {
         await Task.Delay(5000);
         _activeNotifications.Remove(notification);
+
         StateHasChanged();
     }
 }
