--- a/Sources/MagicCardTracker.Pwa/Pages/Sets.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/Sets.razor
@@ -22,7 +22,7 @@
 
 <LoadingIndicator IsBusy=@_isLoading></LoadingIndicator>
 
-@if (!_isLoading)
+@if (!_isLoading && _majorSets != null && _collectedSets != null)
 {
     @foreach (var set in _showAll 
                 ? _majorSets
@@ -53,9 +53,9 @@
 
     private CancellationTokenSource _cts = new CancellationTokenSource();
 
-    private IEnumerable<Set> _majorSets;
+    private IEnumerable<Set>? _majorSets;
 
-    private IEnumerable<Set> _collectedSets;
+    private IEnumerable<Set>? _collectedSets;
 
 
     public void Dispose()
