--- a/Sources/MagicCardTracker.Pwa/Components/CardOverlay.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/CardOverlay.razor
@@ -28,10 +28,8 @@
                         }
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 fadein">
                     <div class="bg-elevated content">
-
-
                         <div class="lead">
                             @_card.Name
                         </div>
