--- a/Sources/MagicCardTracker.Pwa/wwwroot/css/style.css
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/css/style.css
@@ -51,6 +51,9 @@ body {
     max-width: 100%;
     border-radius: 5%;
     cursor: pointer;
+    animation: fadein 0.5s ease forwards;
+    opacity: 0;
+    transform: scale(0.9);
 }
 
 .magic-card.large {
@@ -187,6 +190,21 @@ a, .btn-link, a:hover, .action-link {
     -webkit-text-fill-color: transparent;
     animation: shine 5s alternate infinite;
     background-size: 300%;
+}
+
+.fadein {
+
+    animation: fadein 0.5s ease forwards;
+    opacity: 0;
+    transform: scale(0.9);
+}
+
+@keyframes fadein {
+
+    to { 
+      transform: scale(1);
+      opacity: 1;
+    }
 }
 
 @keyframes shine {
