Added UI for card filter panel

--- a/Sources/MagicCardTracker.Pwa/Components/CardOverlay.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/CardOverlay.razor
@@ -77,12 +77,10 @@
                         </div>
                         <div class="mt-1 d-flex text-center small">
                             <span class="p-1 col text-truncate @GetLegalClass(_card, Legality.Brawl)">Brawl</span>
-                            <span
-                        class="p-1 ms-1 col text-truncate @GetLegalClass(_card, Legality.Historic)">Historic</span>
+                            <span class="p-1 ms-1 col text-truncate @GetLegalClass(_card, Legality.Historic)">Historic</span>
                             <span class="p-1 ms-1 col text-truncate @GetLegalClass(_card, Legality.Pauper)">Pauper</span>
                             <span class="p-1 ms-1 col text-truncate @GetLegalClass(_card, Legality.Penny)">Penny</span>
-                            <span
-                        class="p-1 ms-1 col text-truncate @GetLegalClass(_card, Legality.Commander)">Commander</span>
+                            <span class="p-1 ms-1 col text-truncate @GetLegalClass(_card, Legality.Commander)">Commander</span>
                         </div>
 
                         <div class="mt-4 d-flex justify-content-end">
