--- a/Sources/MagicCardTracker.Pwa/Pages/QuickCollect.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/QuickCollect.razor
@@ -49,7 +49,11 @@
     </div>
 </EditForm>
 
-<CardDisplay ShowCountBadge="true" Cards="@_quickCollectionStack.Reverse()"></CardDisplay>
+<CardDisplay ShowCountBadge="true" Cards="@_quickCollectionStack.Reverse()">
+    <div class="color-white-60 text-center flex-grow-1 d-flex justify-content-center align-items-center lead">
+        Just type some set codes and a card numbers to add them to your collection
+    </div>
+</CardDisplay>
 
 <LoadingIndicator IsBusy=@_isLoading FadeOutBackground="true" Text="Loading card information..."></LoadingIndicator>
 
